Release 0.4-2:
  * Switched to a header-only RNACI.
  * Fixed build issues on Solaris (wcc).

Release 0.4-1:
  * Fixed mkgblmat bug when using non-full contexts.
  * Fixed build issue with Intel compilers.
  * Updated README.md.

Release 0.4-0:
  * Changed base api.
  * Numerous improvements to documentation.
  * Switched to roxygen2.
  * Numerous source organization improvements.

Release 0.3-0
  * Fixed compiler warnings generated from calling Fortran routines.
  * Cleaned up R wrappers.
  * Fixed memory/gc issue in R_PDGELS().
  * Nasty ICTXT bug in descinit (notably affecting Cpdgemr2d) fixed.
  * Modified matrix exponential kernels to take p as argument.
  * Fixed OpenMP issues in Intel compiler suite.
  * Fixed portability issue in Makevars.in.
  * Stopgap fixed regression in MKSUBMAT.
  * Stopgap fixed regression in MKGBLMAT.
  * Updated vignette format.
  * Fixed author affiliation in vignette.
  * Linked with SEXPtools.
  * Refactored internal wrappers to use SEXPtools.
  * Fixed ownany() bug fixed that affected some grid shapes.
  * Vignette copyright updated.
  * PDGELS bug fixes.

Release 0.2-3:
  * Fixed errors in manual.
  * Fixed matrix exponental bugs.
  * Added matrix exponentiation drivers.
  * Added experimental pdsyevx wrapper.
  * Added driver for (non-symmetric) eigenvalue calculator.

Release 0.2-2:
  * Nasty init.grid() bugfix.
  * Bugfix for changing between BLACS and MPI process numbering.
  * Added experimental methods for level 2 distributed-distributed R-like BLAS.
  * Fixed initialization bug in pdgemr2d.

Release 0.2-1:
  * Added PDSYEV wrappers.

Release 0.2-0:
  * Created better separation between pbdBASE and pbdDMAT packages
  * Completely redid the internals.  Much less stupid/wasteful now.
  * Expose BLACS C extension; BLACS pointers now exportable.
  * Added pdsyrk wrappers.
  * Modified pdgemm wrappers.
  * Added new matrix norm and condition number routines.
  * Fix .Last.lib problem.